modificacion vista director

--- a/views/director/create.jade
+++ b/views/director/create.jade
@@ -3,7 +3,7 @@
 
 h1 Asignar director
 h2 programa: #{programa.nombre}
--if (bite==true){
+-if (director == true){
     p Este programa tiene un director asignado, si crea uno nuevo el anterior sera eliminado
 -}
 
